src/test/ui/inference/cannot-infer-closure.rs
fn main() {
    let x = |a: (), b: ()| {
        Err(a)?; //~ ERROR type annotations needed for the closure
        Ok(b)
    };
}
